Fixing lightslider fetch,Email correction,trans tap on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
+  -webkit-tap-highlight-color: transparent;
 }
+
 .body-cont {
   overflow-x: hidden;
   overflow-y: auto;
